Fix poor color contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,8 @@ h1 {
   display: inline-block;
   padding: 0.5rem 0.25rem;
   text-decoration: none;
-  color: var(--primary);
+  color: var(--text-color);
+  border-bottom: 1px solid var(--primary);
 
   @media (min-width: 600px) {
     margin-right: 10px;
